[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu/item_menu/item_menu.gd" type="Script" id=1]

[node name="Control" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="itemList" type="ItemList" parent="."]
margin_right = 279.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Small Potion x5", null, false ]
max_columns = 3
fixed_column_width = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupPanel" parent="."]
margin_left = 192.0
margin_top = 40.0
margin_right = 280.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionList" type="ItemList" parent="PopupMenu"]
margin_left = 4.0
margin_top = 4.0
margin_right = 84.0
margin_bottom = 60.0
items = [ "Item 0", null, false, "Item 1", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}
